Se agregan imagenes

--- a/segurenta/src/app/shared/components/register-property/register-property.component.css
+++ b/segurenta/src/app/shared/components/register-property/register-property.component.css
@@ -21,3 +21,11 @@
 .mat-input-element::placeholder {
     color: #000;
 }
+
+.small-width {
+    width: 10%;
+}
+
+.offset-fixed{
+    margin-left: 1%;
+}
