--- a/segurenta/src/app/shared/components/scheduler/scheduler.component.html
+++ b/segurenta/src/app/shared/components/scheduler/scheduler.component.html
@@ -9,54 +9,22 @@
         </div>
     </div>
     <div>
-        <!-- class="container" -->
-        <div class="row text-center">
-            <!-- <div class="col-8 text-right col-offset-4">
-                <div class="btn-group">
-                    <div class="btn btn-primary" (click)="setView('month')" [class.active]="view === 'month'">
-                        Mes
-                    </div>
-                    <div class="btn btn-primary" (click)="setView('week')" [class.active]="view === 'week'">
-                        Semana
-                    </div>
-                    <div class="btn btn-primary" (click)="setView('day')" [class.active]="view === 'day'">
-                        Hoy
-                    </div>
+        <div class="row">
+            <div class="col-12 borde row">
+                <div class="col-9">
+                    <!-- Calendar Week -->
+                    <app-week [viewDate]="viewDate" [listDates]="listDates"></app-week>
                 </div>
-            </div> -->
-            <!-- <div class="col-1"></div> -->
-            <div class="col-12 borde">
-                <app-week></app-week>
-                <!-- <app-calendar [view]="view" [newEvent]="markDays"></app-calendar> -->
+                <div class="col-3">
+                    <!-- Calendar Month -->
+                    <div class="inline-flatpickr">
+                        <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="viewDate" [altInput]="true" [convertModelValue]="true" [inline]="true">
+                    </div>
+                    <br>
+                    <!-- Nav Dates -->
+                    <app-form-event [listDates]="listDates"></app-form-event>
+                </div>
             </div>
-            <!-- <div class="col-3">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                    </div>
-                    <div class="panel-body inline-flatpickr">
-                        <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="viewDate" [locale]="lan" [altInput]="true" [convertModelValue]="true" [inline]="true">
-                    </div>
-                </div>
-
-            </div> -->
-            <!-- <div class="col-8">
-                <app-calendar [view]="view" [newEvent]="markDays"></app-calendar>
-            </div>
-            <div class="col-4">
-                <div class="row">
-                    <div class="col-12 my-5 text-right">
-                        <div class="btn btn-primary" *ngIf="!markDays" (click)="markDays = true;">
-                            Nuevo Evento
-                        </div>
-                        <div class="btn btn-primary" *ngIf="markDays" (click)="markDays = false;">
-                            Cancelar
-                        </div>
-                    </div>
-                    <div class="col-12" *ngIf="markDays">
-                        <app-form-event></app-form-event>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </div>
     <br><br><br>
