--- a/segurenta/src/app/home-adviser/components/menu/menu.component.html
+++ b/segurenta/src/app/home-adviser/components/menu/menu.component.html
@@ -25,24 +25,16 @@
             </a>
             <p>Mis Comisiones</p>
         </div>
-        <div class="btn-group-vertical align-items-center mx-5">
+        <div class="btn-group-vertical align-items-center mx-4">
             <a>
-                <button class="btn btn-outline-dark rounded-circle"  style="height: 100px; width: 100px; color: white">
+                <button class="btn btn-outline-dark rounded-circle" style="height: 100px; width: 100px; color: white">
                           <!-- <fa-icon [icon]="[ 'fas', 'plus']" size="2x"></fa-icon> -->
                 </button>
             </a>
             <p>Crear Propiedad</p>
         </div>
         <div class="btn-group-vertical align-items-center mx-4">
-            <a>
-                <button class="btn btn-outline-dark rounded-circle" data-toggle="modal" data-target=".renter-profiler-modal" style="height: 100px; width: 100px; color: white">
-                          <!-- <fa-icon [icon]="[ 'fas', 'hiking']" size="2x"></fa-icon> -->
-                </button>
-            </a>
-            <p>Perfilador</p>
-        </div>
-        <div class="btn-group-vertical align-items-center mx-4">
-            <a>
+            <a href="#">
                 <button class="btn btn-outline-dark rounded-circle" style="height: 100px; width: 100px; color: white">
                           <!-- <fa-icon [icon]="[ 'fas', 'home']" size="2x"></fa-icon> -->
                 </button>
