--- a/segurenta/src/app/shared/components/scheduler/week/week.component.html
+++ b/segurenta/src/app/shared/components/scheduler/week/week.component.html
@@ -12,7 +12,7 @@
         <!--  scroll-week -->
         <!-- <mwl-calendar-week-view [viewDate]="viewDate" [events]="events" [locale]="locale" [hourSegmentTemplate]="weekViewHourSegmentTemplate"></mwl-calendar-week-view> -->
         <!-- [hourSegmentModifier]="hourSegmentModifier" -->
-        <mwl-calendar-week-view [viewDate]="viewDate" [events]="events" [dayStartHour]="6" [hourSegments]="1" [locale]="locale" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)" [hourSegmentTemplate]="weekViewHourSegmentTemplate">
+        <mwl-calendar-week-view [viewDate]="viewDate" [events]="events" [dayStartHour]="6" [hourSegments]="1" [locale]="locale" [refresh]="refresh" (eventClicked)="handleEvent($event, $event.event)" (eventTimesChanged)="eventTimesChanged($event)" [hourSegmentTemplate]="weekViewHourSegmentTemplate">
         </mwl-calendar-week-view>
         <!-- [dayStartHour]="7" [dayEndHour]="20" -->
     </div>
