--- a/segurenta/src/app/shared/components/register/register.component.html
+++ b/segurenta/src/app/shared/components/register/register.component.html
@@ -1,92 +1,7 @@
-<!-- <div class="txt-right">
-    <h2 mat-dialog-title><small class="txt-title-muted">Registro </small><span class="txt-title"> {{ title }}</span></h2>
-</div>
-<mat-grid-list cols="12" rowHeight="1:5">
-    <mat-grid-tile colspan="2" class="titleGrid">
-        <ul>
-            <li *ngIf="!isRenter" class="txt-subtitle">
-                <a (click)="changeRegister(1)">Rentar</a>
-                <button (click)="llenar1()"></button>
-            </li>
-            <li *ngIf="isRenter" class="txt-subtitle">
-                <a (click)="changeRegister(2)">Publicar</a>
-                <button (click)="llenar2()"></button>
-            </li>
-        </ul>
-    </mat-grid-tile>
-    <mat-grid-tile colspan="5" style="margin-left:1%;">
-        <form [formGroup]="registerForm" (ngSubmit)="register()" novalidate="novalidate">
-            <mat-form-field class="full-width">
-                <input type="text" class="input-form" matInput placeholder="Nombre(s)" [(ngModel)]="regist.nombres" formControlName="names">
-                <mat-error *ngIf="registerForm.get('names').invalid">{{getErrorMessage("names")}}</mat-error>
-            </mat-form-field>
-            <mat-form-field style="padding-right: 10%;">
-                <input type="text" class="input-form" matInput placeholder="Apellido Paterno" [(ngModel)]="regist.paterno" formControlName="firstLastName">
-                <mat-error *ngIf="registerForm.get('firstLastName').invalid">{{getErrorMessage("firstLastName")}}</mat-error>
-            </mat-form-field>
-            <mat-form-field>
-                <input type="text" class="input-form" matInput placeholder="Apellido Materno" [(ngModel)]="regist.materno" formControlName="secondLastName">
-                <mat-error *ngIf="registerForm.get('secondLastName').invalid">{{getErrorMessage("secondLastName")}}</mat-error>
-            </mat-form-field>
-            <mat-form-field class="full-width">
-                <input type="tel" class="input-form" matInput placeholder="Teléfono" [(ngModel)]="regist.telefono" formControlName="phoneNumber">
-                <mat-error *ngIf="registerForm.get('phoneNumber').invalid">{{getErrorMessage("phoneNumber")}}</mat-error>
-            </mat-form-field>
-            <mat-form-field class="full-width">
-                <input type="email" class="input-form" matInput placeholder="Correo Electrónico" [(ngModel)]="regist.email" formControlName="email">
-                <mat-error *ngIf="registerForm.get('email').invalid">{{getErrorMessage("email")}}</mat-error>
-            </mat-form-field>
-            <mat-form-field class="full-width">
-                <input type="password" class="input-form" matInput placeholder="Contraseña" [(ngModel)]="regist.password" formControlName="password">
-                <mat-error *ngIf="registerForm.get('password').invalid">{{getErrorMessage("password")}}</mat-error>
-            </mat-form-field>
-            <span *ngIf="isRenter">
-                <button class="btn-rounded full-width" style="margin-top: 5%;" mat-raised-button (click)="register()">Registrarme</button>
-                <small class="txt-muted">Al registrarte aceptas los <a (click)="openViewer()">Términos y Condiciones</a> y las <a (click)="openViewer()">Políticas de Privacidad</a>.</small>
-            </span>
-        </form>
-    </mat-grid-tile>
-    <mat-grid-tile colspan="1">
-        <h1 *ngIf="isRenter" class="txt-muted">ó</h1>
-    </mat-grid-tile>
-    <mat-grid-tile colspan="4">
-        <div [hidden]="!isRenter" class="example-button-row">
-            <h1 class="txt-muted full-width">Ingresar con:</h1>
-            <div class="flex">
-                <button mat-fab class="btn-black">
-                    <fa-icon [icon]="['fab', 'facebook-f']" size="2x"></fa-icon>
-                </button>
-                <button mat-fab class="btn-black">
-                    <fa-icon [icon]="['fab', 'google']" size="2x"></fa-icon>
-                </button>
-            </div>
-        </div>
-        <form [hidden]="isRenter" [formGroup]="registerForm" (ngSubmit)="register()" novalidate="novalidate">
-            <h3 class="full-width">¿En dónde quiero mis comisiones?</h3>
-            <mat-form-field class="full-width">
-                <mat-label>Institución Bancaria</mat-label>
-                <mat-select matInput [(value)]="regist.banco" [(ngModel)]="regist.banco" formControlName="bankName">
-                    <mat-option *ngFor="let item of catBancos" [value]="item.id">{{item.corta}}</mat-option>
-                </mat-select>
-                <mat-error *ngIf="registerForm.get('bankName').invalid">{{getErrorMessage("bankName")}}</mat-error>
-            </mat-form-field>
-            <mat-form-field class="full-width">
-                <input type="text" matInput placeholder="Número de Cuenta" [(ngModel)]="regist.clabe" formControlName="clabe">
-                <mat-error *ngIf="registerForm.get('clabe').invalid">{{getErrorMessage("clabe")}}</mat-error>
-            </mat-form-field>
-            <button class="btn-rounded full-width" style="margin-top: 5%;" mat-raised-button (click)="register()">Registrarme</button>
-            <small class="txt-muted">Al registrarte aceptas los 
-                <a (click)="openViewer()">Términos y Condiciones</a> y las 
-                <a (click)="openViewer()">Políticas de Privacidad</a>.
-            </small>
-        </form>
-    </mat-grid-tile>
-</mat-grid-list> -->
-
 <div class="col-12 my-4">
     <div class="row">
         <div class="col-1">
-            <button type="button" #closeModal class="close">
+            <button type="button" class="close">
                             <h1 class="thin">X</h1>
                         </button>
         </div>
@@ -158,14 +73,19 @@
         </div>
         <div class="col-4">
             <div [hidden]="!isRenter">
-                <h1 class="txt-muted col-12">Ingresar con:</h1>
-                <div class="flex">
-                    <button mat-fab class="btn-black">
-                                <fa-icon [icon]="['fab', 'facebook-f']" size="2x"></fa-icon>
-                            </button>
-                    <button mat-fab class="btn-black">
-                                <fa-icon [icon]="['fab', 'google']" size="2x"></fa-icon>
-                            </button>
+                <h1 class="txt-muted col-12 text-center">Ingresar con:</h1>
+                <div class="row">
+                    <div class="col text-right">
+                        <button mat-fab class="btn-black">
+                                    <fa-icon [icon]="['fab', 'facebook-f']" size="2x"></fa-icon>
+                                </button>
+                    </div>
+                    <div class="col text-left">
+                        <button mat-fab class="btn-black">
+                                    <fa-icon [icon]="['fab', 'google']" size="2x"></fa-icon>
+                                </button>
+                    </div>
+
                 </div>
             </div>
             <form [hidden]="isRenter" [formGroup]="registerForm" (ngSubmit)="register()" novalidate="novalidate">
